src/components/TodoMvc/styles.css
body {
    background-color: #033f63;
}

.todoapp {
    margin: 0;
}

.todo-list li .edit-item {
    display: none;
    position: absolute;
    top: 0;
    right: 60px;
    bottom: 0;
    width: 40px;
    height: 40px;
    margin: auto 0;
    font-size: 30px;
    color: #949494;
    transition: color 0.2s ease-out;
}

.todo-list li .edit-item::after {
    content: '✏';
    display: block;
    height: 100%;
    line-height: 1.1;
}

.todo-list li:hover .edit-item {
    display: block;
}

.footer {
    box-sizing: content-box;
}

.unarchive {
    margin: auto 0;
    top: 0;
    bottom: 0;
    left: 10px;
}

